# logc

./: CMakeLists.txt  compile_commands.json
include/logc/: console.h  file.h  logc.h  types.h
src/: console.c  file.c  logc.c  types.c
